src/app/csc/csc.component.scss
table{
  margin-bottom: 0px;
  border: 1px;
}

table li img{
  width: 45px;
  height: 45px;
}

.table {
  th.fy {
    width: 7em;
  }
  th.contains {
    width: 7em;
  }
  th.topics {
    width: 10em;
  }
  th.status {
    width: 7em;
  }
}

ul {
  list-style:  none;
  padding-left: 5px;
}

.list-group-item {
  background: none !important;
}

div.loading {
  margin: 1em;
  padding: 1em;
  text-align: center;
  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

ul {
  margin: 0;
  padding: 0;
}

li.icons {
  display: block !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.icon-map,
.icon-products {
  color: #CCC !important;
}

th{
  text-align: center;
}

table {
  table-layout: fixed;
  word-wrap: break-word;
}

select {
  width: 100%;
  padding: 10px;
}

div.csc {
  padding: 1em;
}

div.no_data {
  margin: 1em;
  border: 1px solid #333;
  padding: 1em;
  a {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

div.loading {
  margin: 1em;
  padding: 1em;
  text-align: center;
  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

div.filter-bar {
  margin-bottom: 1em;

  a {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

select {

}

div .card{
    margin-bottom: 1em !important;
    margin-left:0.3em;
    margin-right: 0.3em;
  }
  .mobile h4.card-title a {
    font-size: 0.8em;
  }


:host /deep/ th {
  text-align: center;
  vertival-align:middle;

}
:host /deep/ ng2-smart-table  {
  font-size:18px;
  border:none;
}
:host /deep/ .fa-2x {
  color: #CCC !important;


}

